# dynamic-size-accounts

./: Anchor.toml  README.md  package.json
programs/dynamic-accounts-poc/: Cargo.toml
programs/dynamic-accounts-poc/src/: lib.rs
tests/: dynamic-accounts-poc.ts
